+ Header fix and new text
Added sticky position to the header and make the scrollable area disappear under it.

Changed the text in the game page and made specific test if the user is in a small screen.

Still missing important update: scrollable main can never go over/under header, it should just disappear at a margin

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -45,6 +45,8 @@ header {
     border-bottom: 0px solid  var(--bg-menu-link);
     width: 100%;
     max-width: 1920px;
+    position: sticky;
+    top: 0;
     display:flex;
     align-items: center;
     justify-content: space-around;
@@ -287,6 +289,16 @@ footer i {
     }
 
     .onlypc {
+ display: none;
+    }
+
+  }
+
+
+@media only screen and (min-width: 1181px) {
+
+
+    .onlySmallScreens {
  display: none;
     }
 
